src/objects/RVConfig__mdt.object
<CustomObject>
    <fields>
        <fullName>DebugInfoRecipientEmails__c</fullName>
        <label>DebugInfoRecipientEmails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailDebugInfoLog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EmailDebugInfoLog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnableLogging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EnableLogging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaxDebugInfoAge__c</fullName>
        <label>MaxDebugInfoAge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxDebugInfoRecords__c</fullName>
        <label>MaxDebugInfoRecords</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RV Config</label>
    <pluralLabel>RV Configs</pluralLabel>
</CustomObject>